--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -66,8 +66,8 @@ margin: 20px 0;
 
 
 .g-img{
-    width:25px;
-    height: 25px;
+    width:20px;
+    height: 20px;
 }
 .g-btn {
     width: 60%;
@@ -78,6 +78,7 @@ margin: 20px 0;
     background-color: #ffffff;
     border: 1px solid #ddd !important;
     border: none;
+    font-size: 14px !important ;
     border-radius: 30px;
     color: #1f1e1e;
     font-size: 1rem;
@@ -91,6 +92,7 @@ margin: 20px 0;
 .varify-btn{
     width: 40%;
     display: flex;
+    font-size: 14px !important ;
     align-items: center;
     justify-content: space-around;
     padding: 0.75rem;
